feat(apidocs+search): Add new search APIs and fix docs
